# using_ssl

./: CMakeLists.txt  Makefile  README.md  doxyfile  rootCA.key  volopaev_fp_cert.pem
common/: CMakeLists.txt  bio_tools.h  error.h  init.h  logger.h  ssl_tools.h  tools.h  types.h
common/src/: bio_tools.cpp  error.cpp  init.cpp  logger.cpp  ssl_tools.cpp  tools.cpp
mail_client/: CMakeLists.txt
mail_client/src/: main.cpp
other/: Makefile
other/src/: certificate.cpp  certificate.h
src/: certificate.cpp  certificate.h  main.cpp
ssl_client/: CMakeLists.txt  Makefile
ssl_client/src/: client.cpp  client.h  main.cpp
ssl_server/: CMakeLists.txt  Makefile
ssl_server/src/: main.cpp  server.cpp  server.h
stuff/: client.cert.pem  client.key.pem  client.pem  client.req.pem  dh1024.pem  dh2048.pem  rootCA.cert.pem  rootCA.key.pem  rootCA.pem  rootca.cert.pem  rootca.key.pem  rootca.pem  rootca.req.pem  rootca.srl  server.cert.pem  server.key.pem  server.pem  server.req.pem  serverCA.cert.pem  serverCA.key.pem  serverCA.pem  serverca.cert.pem  serverca.key.pem  serverca.pem  serverca.req.pem  serverca.srl
stuff/certs/: indorenko_ov_cert.pem  rootCA.crt
stuff/keys/secret/: rootCA.key
